Fixes #248: Translation page broken in Django 3.1.2

--- a/rosetta/templates/rosetta/css/rosetta.css
+++ b/rosetta/templates/rosetta/css/rosetta.css
@@ -36,6 +36,9 @@ div.module {margin-bottom: 20px;}
 #toolbar form { float:left; }
 #changelist table thead th { padding: 2px 5px; }
 
+#changelist {
+  display: block !important;
+}
 
 .info-tip::after {
     content: '?';
